p2-parser/tests/BadRadix.mj
const bad = 0_00000000;
